--- a/Week-04-ECMAScript_6_and_Intermediate_JavaScript/Week4CodingAssignment.html
+++ b/Week-04-ECMAScript_6_and_Intermediate_JavaScript/Week4CodingAssignment.html
@@ -4,5 +4,6 @@
     </head>
     <body style="background-color:greenyellow;">
         <h1>Week 4 Coding Assignment</h1>
+        <h2>By: Patrick Corcoran</h2>
     </body>
 </html>
