Almost Done Coding Assignment

--- a/Week-05-Object_Oriented_Programming/menu.html
+++ b/Week-05-Object_Oriented_Programming/menu.html
@@ -11,6 +11,7 @@
     <h2>By: Patrick Corcoran</h2>
     <button id="get-single-item-from-ls">Display Discography</button><br /><br />
     <button id="remove-all-from-ls">Erase all Data</button><br /><br />
+    <button onClick="window.location.reload();">Enter New or Delete Bands</button><br /><br />
 
   
     <div id="ls-currently"></div>
