finished class curriculum

--- a/Week-05-Object_Oriented_Programming/menu.html
+++ b/Week-05-Object_Oriented_Programming/menu.html
@@ -9,7 +9,7 @@
   </head>
   <body style="background-color:peru;"><h1>Week 5 Menu App</h1>
     <h2>By: Patrick Corcoran</h2>
-    <button id="get-single-item-from-ls">Display Discography</button><br /><br />
+    <button id="get-items-from-ls">Display Discography</button><br /><br />
     <button id="remove-all-from-ls">Erase all Data</button><br /><br />
     <button onClick="window.location.reload();">Enter New or Delete Bands</button><br /><br />
 
