--- a/Week-06-DevTools_Debugging_and_Unit_Tests/war.html
+++ b/Week-06-DevTools_Debugging_and_Unit_Tests/war.html
@@ -5,16 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Week 6 War Game</title>
+    <link rel="stylesheet" href="styles.css">
     
   </head>
-  <body style="background-color:peru;"><h1>Week 6 War Game</h1>
-    <h2>By: Patrick Corcoran</h2>
-
+  <body style="background-color:rgb(38, 70, 58);"></body>
+    <div class="shadowbox">
+      <h3>Week 6 War Game</h3>
+      <h4>By: Patrick Corcoran</h4>
+    </div>
+    <br>
     <button onClick="window.location.reload();">Play Another Game!</button><br /><br />
-
-    <div id="game-log"></div>
     
-    <div id="game-display"></div>
+    <div class="shadowbox" id="game-log"></div>
+    <br>
+    <div class="shadowbox" id="game-display"></div>
 
     <script src="war.js"></script>
     </body>
