--- a/Week-07-HTML/Coding Assignment/Week7CodingAssignmentabout.html
+++ b/Week-07-HTML/Coding Assignment/Week7CodingAssignmentabout.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
 </head>
-<body>
+<body style="background-color:rgb(68, 205, 63);">
     <h1>About the Author</h1>
     <header>
         <nav>
@@ -21,16 +21,16 @@
         <p>Front End Web Development Student and all around guitar nerd</p>
         <p>Feel free to check out my Github Repository and YouTube Channel</p><br><br>
 
-        <table>
-            <tr>
+        <table cellspacing="2" cellpadding="22" bgcolor="#000000">
+            <tr bgcolor="#ffffff">
                 <th>Site</th>
                 <th>Link</th>
             </tr>
-            <tr>
+            <tr bgcolor="#ffffff">
                 <td>GitHub Repository</td>
                 <td><a href="https://github.com/Fraju-pc">Visit My Github</a></td>
             </tr>
-            <tr>
+            <tr bgcolor="#ffffff">
                 <td>YouTube Channel</td>
                 <td><a href="https://www.youtube.com/channel/UC5VxCk3XPxpuq1XyBEo3UcQ">Visit My YouTube</a></td>
             </tr>
