--- a/Week-07-HTML/Coding Assignment/Week7CodingAssignmentcontacts.html
+++ b/Week-07-HTML/Coding Assignment/Week7CodingAssignmentcontacts.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h2>Contact Me</h2>
+<body style="background-color:rgb(68, 205, 63);">
+    <h1>Contact Me</h1>
     <header>
         <nav>
           <ul>
