--- a/Week-08-CSS/Week8contacts.html
+++ b/Week-08-CSS/Week8contacts.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="styles8.css">
 </head>
 <body>
@@ -19,12 +19,16 @@
           </nav>
         </header>
         <br><br>
+    <div class="center-text">   
         <p class="center-text">Feel free to fill out the form below and I will get back to you via Email</p><br>
-    <form class="center-text">
-        <input type="text" name="firstName" placeholder="Enter First Name"><br>
-        <input type="text" name="lastName" placeholder="Last Name"><br>
+      </div> 
+    <div class="center-form">     
+    <form>
+        <input type="text" name="firstName" placeholder="Enter First Name"><br><br>
+        <input type="text" name="lastName" placeholder="Last Name"><br><br>
         <input type="text" name="email" placeholder="Email Address"><br><br>
-        <input type="submit" value="submit">
+        <button id="submit" type="submit" value="submit">Submit</button>
     </form>
+  </div>
 </body>
 </html>
