Early Draft of Week 9 Project

--- a/Week-09-Bootstrap/index.html
+++ b/Week-09-Bootstrap/index.html
@@ -3,126 +3,105 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week 9 Coding Project</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
-    <style>
-        div{
-            border-style: solid;
-            border-color: black;
-        }
-    </style>
+    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>-->
 </head>
-<body class="container">
-
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">CodeProjex</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" 
-    aria-controle="navbarNavDropdown" aria-expanded="false" aria-label="Toggle Navigation">
-    <span class="navbar-toogler-icon"></span>
-</button>
-<div class="collapse navbar-collapse" id="navbarNavDropdown">
-<ul class="navbar-nav">
-    <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Request Info</a>
-    </li>
-    <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-        data-toggle="dropdown" aria-hashpopup="true" aria-expanded="false">Dropdown</a>
-        <div class="dropdown-menu" aria-lablelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Item 1</a>
-            <a class="dropdown-item" href="#">Item 2</a>
-            <a class="dropdown-item" href="#">Item 3</a>
+<body class="container bg-info">
+    <nav class="navbar navbar-expand-lg bg-success">
+        <div class="container-fluid ">
+          <a class="navbar-brand" href="#">The Legend of Zelda!</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown link
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
         </div>
-    </li>
-</ul>
-</div>
-</nav>
-<br><br>
+      </nav>
 
-    <div class="alert alert-primary" role="alert">
-It Works!
-    </div>
-
-    <div class="container">
+      <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-6">Content</div>
-            <div class="col-lg-4">Content</div>
-            <div class="col-lg-2">Content</div>
+            <div class="col-lg">
+              <ul>
+              <li>The Legend of Zelda (1986)</li>
+              <li>Zelda II: The Adventure of Link (1987)</li>
+              <li>The Legend of Zelda: A link to the past (1991)</li>
+              <li>The Legend of Zelda: Link’s Awakening (1993)</li>
+              <li>The Legend of Zelda: Ocarina of Time (1998)</li>
+              <li>The Legend of Zelda: Majora’s Mask (2000)</li>
+              <li>The Legend of Zelda: Oracle of Seasons and Oracle of Ages (2001)</li>
+              <li>The Legend of Zelda: The Wind Waker (2002)</li>
+              <li>The Legend of Zelda|: Four Swords Adventures (2004)</li>
+                <li>The Legend of Zelda: The Minish Cap (2004)</li>
+                  <li>The Legend of Zelda: Twilight Princess (2006)</li>
+                    <li>The Legend of Zelda: Phantom Hourglass (2007)</li>
+                      <li>The Legend of Zelda: Spirit Tracks (2009)</li>
+                        <li>The Legend of Zelda: Skyward Sword (2011)</li>
+                          <li>The Legend of Zelda: A Link Between Worlds (2013)</li>
+                            <li>The Legend of Zelda: Tri Force Heroes (2015)</li>
+                              <li>The Legend of Zelda: Breath of the Wild (2017)</li>
+                                <li>The Legend of Zelda: Tears of the Kingdom (2023)</li>
+              </ul>
+            </div>
         </div>
-    </div>
-
-    <div class="container-fluid">
         <div class="row">
-            <div class="col-sm">Content</div>
-            <div class="col-sm">Content</div>
-            <div class="col-sm">Content</div>
-            
+            <div class="col-sm-4 card"><img src="images/Legend_of_zelda_original.png"></div>
+            <div class="col-sm-4 card"><img src="images/Zelda_II_The_Adventure_of_Link.jpg"></div>
+            <div class="col-sm-4 card"><img src="images/The_Legend_of_Zelda_A_Link_to_the_Past.jpg"></div>
         </div>
+    
         <div class="row">
-            <div class="col-med-8">Here's my 8</div>
-            <div class="col-med-4">Here's my 4</div>
+            <div class="col-sm-4 card"><img src="images/Links_Awakening.png"></div>
+            <div class="col-sm-4 card"><img src="images/Ocarina_of_Time.png"></div>
+            <div class="col-sm-4 card"><img src="images/Majoras_Mask.jpg"></div>
         </div>
-    </div>
-<br>
-    <div class="alert alert-primary">
-        Primary
-    </div>
-    <div class="alert alert-secondary">
-        Secondary
-    </div>
-    <div class="alert alert-success">
-        Success!!!
-    </div>
-    <div class="alert alert-danger">
-        Danger!!!!
-    </div>
-    <div class="alert alert-warning">
-        This is a Warning!
+
+        <div class="row">
+            <div class="col-sm-4 card"><img src="images/Oracle_of_Seasons_and_Oracle_of_Ages.jpg"></div>
+            <div class="col-sm-4 card"><img src="images/The_Wind_Waker.jpg"></div>
+            <div class="col-sm-4 card"><img src="images/The_Legend_of_Zelda_Four_Swords_Adventures.jpg"></div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-4 card"><img src="images/The_Minish_Cap_Game.jpg"></div>
+          <div class="col-sm-4 card"><img src="images/Twilight_Princess_Game.jpg"></div>
+          <div class="col-sm-4 card"><img src="images/Phantom_Hourglass_.jpg"></div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-4 card"><img src="images/Spirit_Tracks_box.jpg"></div>
+        <div class="col-sm-4 card"><img src="images/Skyward_Sword.png"></div>
+        <div class="col-sm-4 card"><img src="images/A_Link_Between_Worlds.jpg"></div>
     </div>
 
-    <button class="btn btn-primary">Primary Button</button>
-    <button class="btn btn-secondary">Secondary Button</button>
-    <button class="btn btn-success">Success Button</button>
-    <button class="btn btn-danger">Danger Button</button>
-    <button class="btn btn-warning">Warning Button</button>
-    <button class="btn btn-info">Info Button</button>
-    <button class="btn btn-light">Light Button</button>
-    <button class="btn btn-dark">Dark Button</button>
-    <button type="button" class="btn btn-link">Link Button</button>
-    <br><br>
+    <div class="row">
+      <div class="col-sm-4 card"><img src="images/Tri_Force_Heroes.jpg"></div>
+      <div class="col-sm-4 card"><img src="images/Breath_of_the_Wild.jpg"></div>
+      <div class="col-sm-4 card"><img src="images/The_Legend_of_Zelda_Tears_of_the_Kingdom.jpg"></div>
+  </div>
 
-    <button class="btn btn-info">Notifications <span class="badge badge-secondary">5</span></button>
-    <h3>Invite Friends <span class="badge badge-primary">New</span></h3>
-    <br><br>
-
-    <table class="table table-dark table-hover">
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Email</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>Sam</td>
-            <td>Sam@Gmail.com</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Tom</td>
-            <td>Tom@Gmail.com</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Sally</td>
-            <td>Sally@Gmail.com</td>
-        </tr>
-    </table>
+    </div>
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
