--- a/Week-09-Bootstrap/pages/about.html
+++ b/Week-09-Bootstrap/pages/about.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Week 9 About</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 </head>
 <body class="container bg-info">
@@ -44,13 +44,15 @@
 <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2>Patrick Corcoran</h2>
-        <p>Front End Web Development Student and all around video game nerd</p>
-        <p>Feel free to check out my Github Repository and YouTube Channel</p><br><br>
-    </div>
+        <br>
+          <br>
+            <h2>Patrick Corcoran</h2>
+              <p>Front End Web Development Student and all around video game nerd</p>
+                <p>Feel free to check out my Github Repository and YouTube Channel</p><br><br>
+      </div>
     </div>
     <div class="row">
-    <div class="col-md-12">
+      <div class="col-md-12">
         <table class="table  table-secondary table-striped rounded rounded-3 overflow-hidden">
             <tr>
                 <th scope="col">Site</th>
@@ -65,12 +67,13 @@
                 <td><a href="https://www.youtube.com/channel/UC5VxCk3XPxpuq1XyBEo3UcQ">Visit My YouTube</a></td>
             </tr>
         </table>
+      </div>
     </div>
-    </div>
-  </div>
+</div>
 
 
-    <script src="../node_modules/jquery/dist/jquery.js"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+<script src="../node_modules/jquery/dist/jquery.js"></script>
+<script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+
 </body>
 </html>
