Final Version with Comments

--- a/Week-08-CSS/Week8contacts.html
+++ b/Week-08-CSS/Week8contacts.html
@@ -7,28 +7,32 @@
     <link rel="stylesheet" href="styles8.css">
 </head>
 <body>
-    
+    <!--Navigation Bar-->
     <header id="header">
       <h1>Contact Me        </h1>
         <nav>
           <ul>
-            <li><button onClick="window.location.href='Week8Index.html';">Home</button></li>
+            <li><button onClick="window.location.href='Index.html';">Home</button></li>
             <li><button onClick="window.location.href='Week8about.html';">About</a></li>
             <li><button onClick="window.location.href='Week8contacts.html';">Contact</a></li>
           </ul>
-          </nav>
-        </header>
-        <br><br>
+        </nav>
+    </header>
+
+<br>
+<br>
+    <!--Main Content-->
     <div class="center-text">   
         <p class="center-text">Feel free to fill out the form below and I will get back to you via Email</p><br>
-      </div> 
+      </div>
+    <!--Form-->
     <div class="center-form">     
-    <form>
+      <form>
         <input type="text" name="firstName" placeholder="Enter First Name"><br><br>
         <input type="text" name="lastName" placeholder="Last Name"><br><br>
         <input type="text" name="email" placeholder="Email Address"><br><br>
         <button id="submit" type="submit" value="submit">Submit</button>
-    </form>
-  </div>
+      </form>
+    </div>
 </body>
 </html>
