--- a/Week-08-CSS/Week8about.html
+++ b/Week-08-CSS/Week8about.html
@@ -7,23 +7,27 @@
     <link rel="stylesheet" href="styles8.css">
 </head>
 <body>
-    
+    <!--Navigation Bar-->
     <header id="header">
         <h1>About the Author   </h1>
-        <nav>
-          <ul>
-            <li><button onClick="window.location.href='Week8Index.html';">Home</button></li>
-            <li><button onClick="window.location.href='Week8about.html';">About</a></li>
-            <li><button onClick="window.location.href='Week8contacts.html';">Contact</a></li>
-          </ul>
-          </nav>
-        </header>
-        <br><br>
+            <nav>
+                <ul>
+                    <li><button onClick="window.location.href='Index.html';">Home</button></li>
+                    <li><button onClick="window.location.href='Week8about.html';">About</a></li>
+                    <li><button onClick="window.location.href='Week8contacts.html';">Contact</a></li>
+                </ul>
+            </nav>
+    </header>
+    
+<br>
+<br>
+    <!--Main Content-->
     <div class="center-text">
         <h2 class="center-text">Patrick Corcoran</h2>
         <p class="center-text">Front End Web Development Student and all around guitar nerd</p>
         <p class="center-text">Feel free to check out my Github Repository and YouTube Channel</p><br><br>
     </div>
+    <!--Table for Exterior Links-->
     <div class="center-text">
         <table>
             <tr>
@@ -32,11 +36,11 @@
             </tr>
             <tr>
                 <td>GitHub Repository</td>
-                <td><a href="https://github.com/Fraju-pc">Visit My Github</a></td>
+                <td><a href="https://github.com/Fraju-pc" target="_blank">Visit My Github</a></td>
             </tr>
             <tr>
                 <td>YouTube Channel</td>
-                <td><a href="https://www.youtube.com/channel/UC5VxCk3XPxpuq1XyBEo3UcQ">Visit My YouTube</a></td>
+                <td><a href="https://www.youtube.com/channel/UC5VxCk3XPxpuq1XyBEo3UcQ" target="_blank">Visit My YouTube</a></td>
             </tr>
         </table>
     </div>
