--- a/Week-08-CSS/Index.html
+++ b/Week-08-CSS/Index.html
@@ -10,7 +10,7 @@
     <!--Navigation Bar-->
     <header id="header">
       <h1>Ibanez Tribute Page</h1>
-        <nav id="navbar">
+        <nav>
           <ul>
             <li><button onClick="window.location.href='Index.html';">Home</button></li>
             <li><button onClick="window.location.href='Week8about.html';">About</a></li>
