final version of project

--- a/Week-09-Bootstrap/pages/about.html
+++ b/Week-09-Bootstrap/pages/about.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 9 About</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
+   
 </head>
-<body class="container bg-info">
+<body class="container-fluid bg-info">
 
-    <nav class="navbar m-1 p-2 navbar-expand-lg bg-success container rounded">
+  <nav class="navbar sticky-top m-1 p-2 navbar-expand-lg bg-success rounded">
         <div class="container-fluid ">
           <a class="navbar-brand" href="#">The Legend of Zelda!</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,14 +46,14 @@
     <div class="row">
       <div class="col-md-12">
         <br>
-          <br>
-            <h2>Patrick Corcoran</h2>
-              <p>Front End Web Development Student and all around video game nerd</p>
-                <p>Feel free to check out my Github Repository and YouTube Channel</p><br><br>
+        <br>
+        <h2>Patrick Corcoran</h2>
+        <p>Front End Web Development Student and all around video game nerd</p>
+        <p>Feel free to check out my Github Repository and YouTube Channel</p><br><br>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-6 d-flex align-items-center container text-center">
         <table class="table  table-secondary table-striped rounded rounded-3 overflow-hidden">
             <tr>
                 <th scope="col">Site</th>
@@ -67,6 +68,11 @@
                 <td><a href="https://www.youtube.com/channel/UC5VxCk3XPxpuq1XyBEo3UcQ">Visit My YouTube</a></td>
             </tr>
         </table>
+      </div>
+      <div class="col-md-6">
+        <div class="container">
+          <img class="img-fluid" src="../images/Master-Sword-Step-10.webp">
+        </div>
       </div>
     </div>
 </div>
