--- a/Week-09-Bootstrap/pages/tlozph.html
+++ b/Week-09-Bootstrap/pages/tlozph.html
@@ -3,13 +3,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 9 Contacts</title>
+    <title>The Legend of Zelda: Phantom Hourglass</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-    <!-- <style>
-      div{
-        border: solid 1px black;
-      }
-    </style> -->
+   
 </head>
 <body class="container-fluid bg-info">
     
@@ -46,34 +42,21 @@
       </nav>
 <br>
 <div class="container">
+  
   <div class="row container">
-    <div class="col-md-12">   
-        <p >Feel free to fill out the form below and I will get back to you via Email</p><br>
-    </div> 
-  </div>
-  <div class="row container">
-    <div class="col-md-6">     
-      <form>
-          <div class="mb-3">
-          <label for="firstName" class="form-label">First Name</label>
-          <input type="text" class="form-control" id="firstName">
-        </div>
-        <div class="mb-3">
-          <label for="lastName" class="form-label">Last Name</label>
-          <input type="text" class="form-control" id="lastName">
-        </div>
-        <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="email" arai-describedby="emailHelp">
-          <br>
-          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-        </div>
-        <br>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+    <div class="col-md-6 container text-center p-2 d-flex justify-content-center mb-2 mt-2">     
+        <img class="rounded" src="../images/Phantom_Hourglass_2.jpg">
     </div>
-    <div class="col-md-6 container text-center p-2 d-flex justify-content-center mb-2 mt-2">  
-      <img class="" src="../images/TLoZ_Series_Triforce_Artwork.png">
+    <div class="col-md-6 card bg-secondary container p-2 d-flex justify-content-center mb-2 mt-2">  
+        <div class="card-body">
+      <ul>
+        <li>The Legend of Zelda: Phantom Hourglass</li>
+        <li>2007</li> 
+        <li>Nintendo Ds</li>      
+      </ul>
+      <br>
+      <a href="../index.html" class="btn btn-primary">Back</a>
+    </div>
     </div>
   </div>
 </div>
