--- a/Week-09-Bootstrap/index.html
+++ b/Week-09-Bootstrap/index.html
@@ -47,20 +47,20 @@
         
         <div class="row">
           <div class="col-md-12">
-            <h1>The Legend of Zelda</h1>
+            <h1 class="text-danger">The Legend of Zelda</h1>
               <br>
                 <br>
-                <p>The Legend of Zelda is an action-adventure game franchise created by the Japanese game designers Shigeru Miyamoto and Takashi Tezuka. It is primarily developed and published by Nintendo.</p>
-                  <p>The series centers on the various incarnations of Link, a courageous young man of the elf-like Hylian race, and Princess Zelda, a magical princess who is the mortal reincarnation of the goddess Hylia, as they fight to save the magical land of Hyrule from Ganon, an evil warlord turned demon king, who is the principal antagonist of the series. Ganon wishes to use the Triforce, a sacred relic left behind by the three goddesses that created Hyrule, to remake the world in his own dark image.</p>
-                    <p>Although their personalities and backstory differ from game to game, the incarnations of Link and Zelda often have many traits in common, such as Link often being left-handed and clad in green, and Zelda being associated with wisdom, light, and prophesy. While the conflict with Ganon serves as a backbone for the series, some games have featured other settings and antagonists, with Link traveling or being sent to these other lands in their time of need.</p>
-                      <p>Since the original Legend of Zelda was released in 1986, the series has expanded to include 18 entries on all of Nintendo's major game consoles, as well as a number of spin-offs. The Legend of Zelda is one of Nintendo's most successful franchises; several of its entries are considered among the greatest video games of all time.</p>              
+                <p class="text-light">The Legend of Zelda is an action-adventure game franchise created by the Japanese game designers Shigeru Miyamoto and Takashi Tezuka. It is primarily developed and published by Nintendo.</p>
+                  <p class="text-light">The series centers on the various incarnations of Link, a courageous young man of the elf-like Hylian race, and Princess Zelda, a magical princess who is the mortal reincarnation of the goddess Hylia, as they fight to save the magical land of Hyrule from Ganon, an evil warlord turned demon king, who is the principal antagonist of the series. Ganon wishes to use the Triforce, a sacred relic left behind by the three goddesses that created Hyrule, to remake the world in his own dark image.</p>
+                    <p class="text-light">Although their personalities and backstory differ from game to game, the incarnations of Link and Zelda often have many traits in common, such as Link often being left-handed and clad in green, and Zelda being associated with wisdom, light, and prophesy. While the conflict with Ganon serves as a backbone for the series, some games have featured other settings and antagonists, with Link traveling or being sent to these other lands in their time of need.</p>
+                      <p class="text-light">Since the original Legend of Zelda was released in 1986, the series has expanded to include 18 entries on all of Nintendo's major game consoles, as well as a number of spin-offs. The Legend of Zelda is one of Nintendo's most successful franchises; several of its entries are considered among the greatest video games of all time.</p>              
           </div>
         </div>
         <br>
         <br>
         <div class="row">
           <div class="col-md-12">
-            <h2>The Main Line Games in Chronological Order:</h2>
+            <h2 class="text-danger">The Main Line Games in Chronological Order:</h2>
               <br>
           </div>
         </div>
