--- a/Week-09-Bootstrap/pages/contacts.html
+++ b/Week-09-Bootstrap/pages/contacts.html
@@ -48,22 +48,22 @@
 <div class="container">
   <div class="row container">
     <div class="col-md-12">   
-        <p >Feel free to fill out the form below and I will get back to you via Email</p><br>
+        <p class="text-light">Feel free to fill out the form below and I will get back to you via Email</p><br>
     </div> 
   </div>
   <div class="row container">
     <div class="col-md-6">     
       <form>
           <div class="mb-3">
-          <label for="firstName" class="form-label">First Name</label>
+          <label for="firstName" class="form-label text-light">First Name</label>
           <input type="text" class="form-control" id="firstName">
         </div>
         <div class="mb-3">
-          <label for="lastName" class="form-label">Last Name</label>
+          <label for="lastName" class="form-label text-light">Last Name</label>
           <input type="text" class="form-control" id="lastName">
         </div>
         <div class="mb-3">
-          <label for="email" class="form-label">Email address</label>
+          <label for="email" class="form-label text-light">Email address</label>
           <input type="email" class="form-control" id="email" arai-describedby="emailHelp">
           <br>
           <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
