--- a/Week-09-Bootstrap/pages/tloz2.html
+++ b/Week-09-Bootstrap/pages/tloz2.html
@@ -50,9 +50,9 @@
     <div class="col-md-6 card bg-secondary container p-2 d-flex justify-content-center mb-2 mt-2">  
         <div class="card-body">
       <ul>
-        <li>The Legend of Zelda II: The Adventure of Link</li>
-        <li>1987</li> 
-        <li>Nintentdo Entertainment System</li>      
+        <li class="text-light">The Legend of Zelda II: The Adventure of Link</li>
+        <li class="text-light">1987</li> 
+        <li class="text-light">Nintentdo Entertainment System</li>      
       </ul>
       <br>
       <a href="../index.html" class="btn btn-primary">Back</a>
