--- a/Week-09-Bootstrap/pages/tlozalttp.html
+++ b/Week-09-Bootstrap/pages/tlozalttp.html
@@ -50,9 +50,9 @@
     <div class="col-md-6 card bg-secondary container p-2 d-flex justify-content-center mb-2 mt-2">  
         <div class="card-body">
       <ul>
-        <li>The Legend of Zelda: A link to the past</li>
-        <li>1991</li> 
-        <li>Super Nintentdo Entertainment System</li>      
+        <li class="text-light">The Legend of Zelda: A link to the past</li>
+        <li class="text-light">1991</li> 
+        <li class="text-light">Super Nintentdo Entertainment System</li>      
       </ul>
       <br>
       <a href="../index.html" class="btn btn-primary">Back</a>
