--- a/Week-09-Bootstrap/pages/tlozoosa.html
+++ b/Week-09-Bootstrap/pages/tlozoosa.html
@@ -50,9 +50,9 @@
     <div class="col-md-6 card bg-secondary container p-2 d-flex justify-content-center mb-2 mt-2">  
         <div class="card-body">
       <ul>
-        <li>The Legend of Zelda: Oracle of Seasons / Ages</li>
-        <li>2001</li> 
-        <li>Gameboy Color</li>      
+        <li class="text-light">The Legend of Zelda: Oracle of Seasons / Ages</li>
+        <li class="text-light">2001</li> 
+        <li class="text-light">Gameboy Color</li>      
       </ul>
       <br>
       <a href="../index.html" class="btn btn-primary">Back</a>
