--- a/Week-09-Bootstrap/pages/tloztww.html
+++ b/Week-09-Bootstrap/pages/tloztww.html
@@ -50,9 +50,9 @@
     <div class="col-md-6 card bg-secondary container p-2 d-flex justify-content-center mb-2 mt-2">  
         <div class="card-body">
       <ul>
-        <li>The Legend of Zelda: The Wind Waker</li>
-        <li>2002</li> 
-        <li>Nintendo Gamecube</li>      
+        <li class="text-light">The Legend of Zelda: The Wind Waker</li>
+        <li class="text-light">2002</li> 
+        <li class="text-light">Nintendo Gamecube</li>      
       </ul>
       <br>
       <a href="../index.html" class="btn btn-primary">Back</a>
