--- a/Week-09-Bootstrap/pages/about.html
+++ b/Week-09-Bootstrap/pages/about.html
@@ -48,8 +48,8 @@
         <br>
         <br>
         <h2 class="text-danger">Patrick Corcoran</h2><br>
-        <p class="text-light">Front End Web Development Student and all around video game nerd</p>
-        <p class="text-light">Feel free to check out my Github Repository and YouTube Channel</p><br><br>
+        <p class="text-primary">Front End Web Development Student and all around video game nerd</p>
+        <p class="text-primary">Feel free to check out my Github Repository and YouTube Channel</p><br><br>
       </div>
     </div>
     <div class="row">
