--- a/Week-09-Bootstrap/pages/about.html
+++ b/Week-09-Bootstrap/pages/about.html
@@ -8,7 +8,7 @@
    
 </head>
 <body class="container-fluid bg-info">
-
+<!--Nav Bar-->
   <nav class="navbar sticky-top m-1 p-2 navbar-expand-lg bg-success rounded">
         <div class="container-fluid ">
           <a class="navbar-brand" href="#">The Legend of Zelda!</a>
@@ -26,6 +26,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="contacts.html">Contact Us</a>
               </li>
+              <!-- Drop Down Portion of Nav -->
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Other Links <span class="badge bg-danger">3</span>
@@ -47,6 +48,7 @@
       <div class="col-md-12">
         <br>
         <br>
+        <!-- Body Labels and Text -->
         <h2 class="text-danger">Patrick Corcoran</h2><br>
         <p class="text-primary">Front End Web Development Student and all around video game nerd</p>
         <p class="text-primary">Feel free to check out my Github Repository and YouTube Channel</p><br><br>
@@ -54,6 +56,7 @@
     </div>
     <div class="row">
       <div class="col-md-6 d-flex align-items-center container text-center">
+        <!-- Required Table element -->
         <table class="table  table-secondary table-striped rounded rounded-3 overflow-hidden">
             <tr>
                 <th scope="col">Site</th>
@@ -71,6 +74,7 @@
       </div>
       <div class="col-md-6">
         <div class="container">
+          <!-- Sword and Shield Image -->
           <img class="img-fluid" src="../images/Master-Sword-Step-10.webp">
         </div>
       </div>
@@ -78,7 +82,6 @@
 </div>
 
 
-<script src="../node_modules/jquery/dist/jquery.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 
 </body>
