--- a/Week-09-Bootstrap/pages/tloz.html
+++ b/Week-09-Bootstrap/pages/tloz.html
@@ -8,7 +8,7 @@
     
 </head>
 <body class="container-fluid bg-info">
-    
+    <!--Nav Bar-->
   <nav class="navbar sticky-top m-1 p-2 navbar-expand-lg bg-success rounded">
         <div class="container-fluid ">
           <a class="navbar-brand" href="#">The Legend of Zelda!</a>
@@ -26,6 +26,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="contacts.html">Contact Us</a>
               </li>
+              <!-- Drop Down Portion of Nav -->
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Other Links <span class="badge bg-danger">3</span>
@@ -44,10 +45,12 @@
 <div class="container">
   
   <div class="row container">
-    <div class="col-md-6 container text-center p-2 d-flex justify-content-center mb-2 mt-2">     
+    <div class="col-md-6 container text-center p-2 d-flex justify-content-center mb-2 mt-2">    
+        <!-- Landing Page Image  -->
         <img class="rounded" src="../images/Legend_of_zelda_original.png">
     </div>
     <div class="col-md-6 card bg-secondary container p-2 d-flex justify-content-center mb-2 mt-2">  
+      <!-- Info Card -->
         <div class="card-body">
       <ul>
         <li class="text-light">The Legend of Zelda</li>
@@ -61,7 +64,6 @@
   </div>
 </div>
 
-  <script src="../node_modules/jquery/dist/jquery.js"></script>
   <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 
 </body>
