--- a/Week-09-Bootstrap/pages/contacts.html
+++ b/Week-09-Bootstrap/pages/contacts.html
@@ -5,14 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 9 Contacts</title>
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-    <!-- <style>
-      div{
-        border: solid 1px black;
-      }
-    </style> -->
+    
 </head>
 <body class="container-fluid bg-info">
-    
+   <!--Nav Bar--> 
   <nav class="navbar sticky-top m-1 p-2 navbar-expand-lg bg-success rounded">
         <div class="container-fluid ">
           <a class="navbar-brand" href="#">The Legend of Zelda!</a>
@@ -30,6 +26,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="contacts.html">Contact Us</a>
               </li>
+              <!-- Drop Down Portion of Nav -->
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Other Links <span class="badge bg-danger">3</span>
@@ -48,11 +45,13 @@
 <div class="container">
   <div class="row container">
     <div class="col-md-12">   
+      <!-- Main Body text -->
         <p class="text-primary">Feel free to fill out the form below and I will get back to you via Email</p><br>
     </div> 
   </div>
   <div class="row container">
-    <div class="col-md-6">     
+    <div class="col-md-6">  
+      <!-- Required Form Element    -->
       <form>
           <div class="mb-3">
           <label for="firstName" class="form-label text-primary">First Name</label>
@@ -73,12 +72,12 @@
       </form>
     </div>
     <div class="col-md-6 container text-center p-2 d-flex justify-content-center mb-2 mt-2">  
+      <!-- Triforce Image -->
       <img class="" src="../images/TLoZ_Series_Triforce_Artwork.png">
     </div>
   </div>
 </div>
 
-  <script src="../node_modules/jquery/dist/jquery.js"></script>
   <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 
 </body>
