--- a/Week-11-JQuery_and_AJAX/index.html
+++ b/Week-11-JQuery_and_AJAX/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="tictac.css">
 
 </head>
-<body>
+<body class="container pl-2 pr-2 ml-2 mr-2">
 
     <div class="container text-center">
         <div class="turn-display"></div><br>
+        <div class="grid container text-center">
     <div class="row">
         <div class="col sm-4 cell" data-index="1">
             
@@ -45,6 +46,7 @@
             
         </div>
     </div>
+</div>
     <div class="row">
         <div class="restart"><br><br><button id="playAgain" class="btn btn-danger" onclick="playAgain()">Play Again</button></div>
         <br>
