--- a/Week-12-Project/index.html
+++ b/Week-12-Project/index.html
@@ -54,7 +54,7 @@
 <div class="row">
     <div class="col-lg-6">
         <h5>Ayla</h5>
-        <table id="a-list" class="table table-primary table-striped rounded">
+        <table id="a-list" class="table table-warning table-striped rounded">
             <tr>
                 <th>Task</th>
                 <th>Date Created</th>
@@ -65,7 +65,7 @@
     </div>
     <div class="col-lg-6">
         <h5>Braiden</h5>
-        <table id="b-list" class="table table-warning table-striped">
+        <table id="b-list" class="table table-primary table-striped">
             <tr>
                 <th>Task</th>
                 <th>Date Created</th>
@@ -78,7 +78,7 @@
 <div class="row">
     <div class="col-lg-6">
         <h5>Callan</h5>
-        <table id="c-list" class="table table-danger table-striped">
+        <table id="c-list" class="table table-success table-striped">
             <tr>
                 <th>Task</th>
                 <th>Date Created</th>
@@ -89,7 +89,7 @@
     </div>
     <div class="col-lg-6">
         <h5>Delaney</h5>
-        <table id="d-list" class="table table-success table-striped">
+        <table id="d-list" class="table table-danger table-striped">
             <tr>
                 <th>Task</th>
                 <th>Date Created</th>
