--- a/Week-12-Project/index.html
+++ b/Week-12-Project/index.html
@@ -13,8 +13,14 @@
 <div class="card">
     <div class="card-body">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-6">
                 <h1>House Chores List</h1>
+            </div>
+            <div class="col-md-3">
+                <button class="btn btn-primary" onclick="window.location.href='users.html';">Manage Users</button>
+            </div>
+            <div class="col-md-3">
+                <button class="btn btn-primary" onclick="window.location.href='login.html';">Logout</button>
             </div>
         </div>
         <div class="row">
