fully working, needs style

--- a/Week-12-Project/pages/admin.html
+++ b/Week-12-Project/pages/admin.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House Chores</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 
 </head>
 <body class="container bg-secondary">
@@ -20,7 +20,7 @@
                 <button class="btn btn-primary" onclick="window.location.href='users.html';">Manage Users</button>
             </div>
             <div class="col-md-3">
-                <button class="btn btn-primary" onclick="window.location.href='login.html';">Logout</button>
+                <button class="btn btn-primary" onclick="window.location.href='../login.html';">Logout</button>
             </div>
         </div>
         <div class="row">
@@ -106,9 +106,9 @@
     </div>
 </div>
 
-<script src="node_modules/jquery/dist/jquery.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>  
+<script src="../node_modules/jquery/dist/jquery.js"></script>
+<script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>  
 <script src="https://smtpjs.com/v3/smtp.js"></script>  
-<script src="index.js"></script>
+<script src="../modules/admin.js"></script>
 </body>
 </html>
