--- a/Week-12-Project/pages/users.html
+++ b/Week-12-Project/pages/users.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>House Chores</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
 
 </head>
 <body class="container bg-secondary">
@@ -16,7 +16,7 @@
             <div class="col-md-6">
                 <h1>Add New User</h1>
             </div>
-            <div class="col-md-6"><button class="btn btn-primary" onclick="window.location.href='index.html';">Go Back</button></div>
+            <div class="col-md-6"><button class="btn btn-primary" onclick="window.location.href='admin.html';">Go Back</button></div>
         </div>
         <div class="row">
             <div class="col-sm">
@@ -43,8 +43,8 @@
 </div>
 
 
-<script src="node_modules/jquery/dist/jquery.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-<script src="users.js"></script>
+<script src="../node_modules/jquery/dist/jquery.js"></script>
+<script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+<script src="../modules/users.js"></script>
 </body>
 </html>
