added modal, login tweak, almost there

--- a/Week-12-Project/login.html
+++ b/Week-12-Project/login.html
@@ -20,7 +20,7 @@
             <br>
           </div>
           <div class="form-floating">
-            <input type="text" class="form-control" id="password" placeholder="Password">
+            <input type="password" class="form-control" id="password" placeholder="Password">
             <label for="password">Password</label>
           </div>
       
