--- a/Week-12-Project/pages/admin.html
+++ b/Week-12-Project/pages/admin.html
@@ -17,7 +17,7 @@
                 <h1>House Chores List</h1>
             </div>
             <div class="col-md-3">
-                <button class="btn btn-primary" onclick="window.location.href='users.html';">Manage Users</button>
+                <button class="btn btn-primary" onclick="window.location.href='../pages/users.html';">Manage Users</button>
             </div>
             <div class="col-md-3">
                 <button class="btn btn-primary" onclick="window.location.href='../login.html';">Logout</button>
