--- a/Week-12-Project/pages/users.html
+++ b/Week-12-Project/pages/users.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col-sm">
                 <div class="form-group">
-                    <label for="new-use">New User</label>
+                    <label for="new-user">New User</label>
                     <input type="text" class="form-control" id="new-user" placeholder="User Name">
                 </div>
             </div>
@@ -41,7 +41,71 @@
         </div>
     </div>
 </div>
+<div class="row">
+    <div class="col-lg-12">
+        <h5>Users</h5>
+        <table id="u-list" class="table table-secondary table-striped rounded">
+        <tr>
+            <th>User</th>
+            <th>Id</th>
+            <th>Password</th>
+            <th>Actions</th>
+        </tr>
+    </table>
+    </div>
+</div>
 
+  <!-- Modal -->
+  <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <div class="card">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h1>Update User</h1>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm">
+                                <div class="form-group">
+                                    <label for="id">Id</label>
+                                    <input type="text" class="form-control" id="id" placeholder="User Id">
+                                </div>
+                            </div>
+                        </div>
+                    <div class="row">
+                        <div class="col-sm">
+                            <div class="form-group">
+                                <label for="user">User</label>
+                                <input type="text" class="form-control" id="user" placeholder="User Name">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm">
+                            <div class="form-group">
+                                <label for="password">Password</label>
+                                <input type="text" class="form-control" id="password" placeholder="Password">
+                            </div>
+                        </div>
+                        
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" id="close" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" id="update" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
 <script src="../node_modules/jquery/dist/jquery.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
