--- a/Week-12-Project/pages/blist.html
+++ b/Week-12-Project/pages/blist.html
@@ -12,6 +12,7 @@
 <br>
 <div class="card">
     <div class="card-body">
+      <!-- header and back button-->
         <div class="row">
             <div class="col-md-6">
                 <h1>Braiden's Chore List</h1>
@@ -25,6 +26,7 @@
 </div>
 <div class="row">
     <div class="col-md-12">
+      <!-- task table-->
         <br><br>
         <table id="b-list" class="table table-primary table-striped rounded">
             <tr>
@@ -54,7 +56,7 @@
       </div>
     </div>
   </div>
-
+<!-- scripts -->
 <script src="../node_modules/jquery/dist/jquery.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>  
 <script src="https://smtpjs.com/v3/smtp.js"></script>  
