--- a/Week-12-Project/login.html
+++ b/Week-12-Project/login.html
@@ -10,17 +10,18 @@
 </head>
 <body class="container bg-secondary text-center">
     <main class="form-signin">
-        
+        <!-- Login Form-->
           <img class="mb-4" src="./images/checklist.png" alt="" height="300">
           <h1 class="h3 mb-3 fw-normal"><b>House Chores</b> - Login</h1>
           <form id="loginForm">
           <div class="form-floating">
-            
+            <!-- user name -->
             <input type="text" class="form-control" id="username" placeholder="User Name">
             <label for="username">User Name</label>
             <br>
           </div>
           <div class="form-floating">
+            <!-- password -->
             <input type="password" class="form-control" id="password" placeholder="Password">
             <label for="password">Password</label>
           </div>
@@ -45,7 +46,7 @@
     </div>
   </div>
 </div>
-
+<!-- scripts -->
 <script src="node_modules/jquery/dist/jquery.js"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>  
 <script src="login.js"></script>
