--- a/Week-12-Project/pages/admin.html
+++ b/Week-12-Project/pages/admin.html
@@ -13,6 +13,7 @@
 <div class="card">
     <div class="card-body">
         <div class="row">
+            <!--Form to create new Task-->
             <div class="col-md-6">
                 <h1>House Chores List</h1>
             </div>
@@ -26,6 +27,7 @@
         <div class="row">
             <div class="col-sm">
                 <div class="form-group">
+                    <!--Person to create Task for-->
                     <label for="assigned-person">Person</label>
                     <select class="form-control" id="assigned-person" name="assigned-person" placeholder="Person to Assign">
                         <option value="Ayla">Ayla</option>
@@ -36,6 +38,7 @@
                 </div>
             </div>
             <div class="col-sm">
+                <!--Date created-->
                 <div class="form-group">
                     <label for="date-assigned">Date</label>
                     <input type="date" class="form-control" id="date-assigned">
@@ -44,6 +47,7 @@
         </div>
         <div class="row">
             <div class="col-sm">
+                <!--Task to be completed-->
                 <div class="form-group">
                     <label for="assigned-task">Task</label>
                     <input type="text" class="form-control" id="assigned-task" placeholder="Task">
@@ -52,6 +56,7 @@
             
         </div>
         <div>
+            <!-- submit button-->
             <br>
             <button id="add" class="btn btn-primary form-control">Create</button>
         </div>
@@ -59,6 +64,7 @@
 </div>
 <div class="row">
     <div class="col-lg-6">
+        <!-- First Table -->
         <h5>Ayla</h5>
         <table id="a-list" class="table table-warning table-striped rounded">
             <tr>
@@ -70,6 +76,7 @@
         </table>
     </div>
     <div class="col-lg-6">
+        <!-- Second table-->
         <h5>Braiden</h5>
         <table id="b-list" class="table table-primary table-striped">
             <tr>
@@ -83,6 +90,7 @@
 </div>
 <div class="row">
     <div class="col-lg-6">
+        <!-- Third Table-->
         <h5>Callan</h5>
         <table id="c-list" class="table table-success table-striped">
             <tr>
@@ -94,6 +102,7 @@
         </table>
     </div>
     <div class="col-lg-6">
+        <!-- Fourth Table -->
         <h5>Delaney</h5>
         <table id="d-list" class="table table-danger table-striped">
             <tr>
@@ -122,7 +131,7 @@
       </div>
     </div>
   </div>
-
+<!-- scripts -->
 <script src="../node_modules/jquery/dist/jquery.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>  
 <script src="https://smtpjs.com/v3/smtp.js"></script>  
