--- a/Week-12-Project/pages/alist.html
+++ b/Week-12-Project/pages/alist.html
@@ -12,6 +12,7 @@
 <br>
 <div class="card">
     <div class="card-body">
+      <!-- header and back button-->
         <div class="row">
             <div class="col-md-6">
                 <h1>Ayla's Chore List</h1>
@@ -26,6 +27,7 @@
 <div class="row">
     <div class="col-md-12">
         <br><br>
+        <!-- Task table-->
         <table id="a-list" class="table table-warning table-striped rounded">
             <tr>
                 <th>Task</th>
@@ -54,7 +56,7 @@
       </div>
     </div>
   </div>
-
+<!-- scripts -->
 <script src="../node_modules/jquery/dist/jquery.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>  
 <script src="https://smtpjs.com/v3/smtp.js"></script>  
