--- a/Week-12-Project/pages/users.html
+++ b/Week-12-Project/pages/users.html
@@ -12,6 +12,7 @@
 <br>
 <div class="card">
     <div class="card-body">
+        <!-- form to add new user -->
         <div class="row">
             <div class="col-md-6">
                 <h1>Add New User</h1>
@@ -19,6 +20,7 @@
             <div class="col-md-6"><button class="btn btn-primary" onclick="window.location.href='admin.html';">Go Back</button></div>
         </div>
         <div class="row">
+            <!-- user name -->
             <div class="col-sm">
                 <div class="form-group">
                     <label for="new-user">New User</label>
@@ -27,6 +29,7 @@
             </div>
         </div>
         <div class="row">
+            <!-- password -->
             <div class="col-sm">
                 <div class="form-group">
                     <label for="new-password">Password</label>
@@ -35,6 +38,7 @@
             </div>
             
         </div>
+        <!-- submit button -->
         <div>
             <br>
             <button id="add" class="btn btn-primary form-control">Add New User</button>
@@ -43,6 +47,7 @@
 </div>
 <div class="row">
     <div class="col-lg-12">
+        <!-- user display table -->
         <br><br>
         <h5>Users</h5>
         <table id="u-list" class="table table-secondary table-striped rounded">
@@ -72,6 +77,7 @@
                             <h1>Update User</h1>
                         </div>
                         <div class="row">
+                            <!-- ID to update-->
                             <div class="col-sm">
                                 <div class="form-group">
                                     <label for="id">Id</label>
@@ -80,6 +86,7 @@
                             </div>
                         </div>
                     <div class="row">
+                        <!-- name to update -->
                         <div class="col-sm">
                             <div class="form-group">
                                 <label for="user">User</label>
@@ -89,6 +96,7 @@
                     </div>
                     <div class="row">
                         <div class="col-sm">
+                            <!-- passwrod to update-->
                             <div class="form-group">
                                 <label for="password">Password</label>
                                 <input type="text" class="form-control" id="password" placeholder="Password">
@@ -101,6 +109,7 @@
             </div>
         </div>
         <div class="modal-footer">
+            <!-- buttons to submit or close the modal-->
           <button type="button" id="close" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           <button type="button" id="update" class="btn btn-primary">Save changes</button>
         </div>
@@ -108,6 +117,7 @@
     </div>
   </div>
 
+  <!-- scripts -->
 <script src="../node_modules/jquery/dist/jquery.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script src="../modules/users.js"></script>
